--- a/mixx/css/main.css
+++ b/mixx/css/main.css
@@ -55,14 +55,157 @@ html, body{
 #content{
 	position: relative;
 	overflow-x:hidden; 
-  animation: accessin4 3s ease-in-out;
   /*width: 1000px;*/
   margin: 90px auto 0;
 }
 
-/*navvvvvvvvvvvvvvvvvvvvvvvvv*/
+.description{
+  max-width: 750px;
+  padding: 0 25px;
+  font-size: 18px;
+  color: #aaa;
+  font-weight: 400;
+  line-height: 1.7;
+  max-width: 600px;
+  margin: 10px auto 30px;
+  text-align: center;
+}
+
+.description .hilight{
+  font-weight: 400;
+  color: #ddd;
+}
+
+.description.mapdescription{
+  margin: 25px auto 50px;
+  font-weight: 300;
+  text-align: left;
+}
+
+#appendix .description.mapdescription{
+  margin: 25px auto 0;
+}
+
+.parttitle{
+  color: #884394;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+#concept{
+  padding: 40px 0;
+}
+
+#research{
+  padding: 40px 0;
+}
+
+#experience{
+  
+}
+
+.imgrid{
+  text-align: center;
+  margin: 0 auto;
+  /*max-width: 750px;*/
+}
+
+#research .imgrid{
+  margin: 50px auto 0;
+}
+
+#concept .grid4{
+  text-align: left;
+  max-width: 450px;
+}
+
+#ui{
+  padding: 40px 0;
+  background: #212121;
+}
+
+#appendix{
+  padding: 40px 0;
+}
+
+.gallery{
+  display: none;
+  overflow: auto;
+  left: 0; right: 0;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  max-width: 1800px;
+  margin: 20px auto 20px;
+  text-align: center;
+}
+
+#research .gallery{
+  display: block;
+}
+
+#research .gallery .imgingrid{
+max-width: 220px;
+}
+
+.gallery div{
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.grid4{
+  display: inline-block;
+  left: 0;
+  right: 0;
+  max-width: 375px;
+  width: 375px;
+  border: 1px solid black;
+  /*height: 375px;*/
+  text-align: center;
+  border: none;
+  margin: 20px 10px;
+  /*height: 375px;*/
+}
+
+.grid4.annotate{
+  text-align: left;
+
+}
+
+.grid4 img{
+  /*height: 100%;*/
+}
+
+.imgrid tr{
+  margin: 20px 0 0 0;
+
+}
+
+.imgingrid{
+  display: inline-block;
+  max-width: 350px;
+  /*width: 350px;*/
+  max-height: 410px;
+}
+
+#concept .imgingrid{
+  max-width: 450px;
+}
+
+#concept .grid4{
+  width: auto;
+}
 
 
+th .hilight{
+  line-height: 3;
+  font-size: 19px;
+}
+
+.mobileview{
+  display: none;
+}
 
 .readmore{
   max-width: 630px;
@@ -78,6 +221,9 @@ html, body{
   position: absolute;
   top: 0;
   width: 100%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 .readmore:hover {
@@ -100,7 +246,7 @@ display: none;
   text-align: center;
   font-weight: 200;
   letter-spacing: 1px;
-  margin-bottom: 70px;
+  margin-bottom: 40px;
   padding: 0 10px;
 }
 
@@ -188,7 +334,7 @@ p.tagline3{
 /*navvvvvvvvvvvvvvvvvvvvvvvvv ennnnnnnnds*/
 
 .showcase{
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   display: block;
 }
@@ -474,12 +620,7 @@ p{
   opacity: 0.8;
 }
 
-.quotation{
-  max-width: 500px;
-  color: #bbb;
-  text-align: right;
-  margin: 70px auto 50px;
-}
+
 
 .keypoint{
   font-weight: 200;
@@ -496,112 +637,6 @@ p{
 
 
 
-/*mybutttttttttttttttttttttttttttt*/
-#mybutt{
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
-/*  background: #373941;*/
-}
-
-.mycopyright{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 120px;
-  height: 20px;
-  text-align: center;
-}
-
-
-.mycopyright a:hover{
-  text-decoration: none;
-  color: black;
-}
-
-.mycopyright .myrightfont{
-  font-size: 8.5pt;
-  vertical-align: 1.5px;
-  /*line-height: 10px;*/
-  color:#999;
-}
-
-.mycopyright .myrightfont .mycopyrightc{
-  font-size: 8.5pt;
-  
-}
-
-.mysharebuttom1{
-  position: absolute;
-  right:0;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom1:hover{
-  color: white;
-  background: #3b5998;
-}
-
-.mysharebuttom2{
-  position: absolute;
-  right:20px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom2:hover{
-  color: white;
-/*  background: #36465d;*/
-  background:#55acee;
-
-}
-
-.mysharebuttom3{
-  position: absolute;
-  right:40px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom3:hover{
-  color: white;
-  background: #3f729b;
-}
-
-.mysharebuttom4{
-  position: absolute;
-  right:60px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom4:hover{
-  color: white;
-  background: #55acee;
-
-}
 
 
 
@@ -668,7 +703,7 @@ padding:0 25px;
 
 }*/
 
-@media screen and (max-width: 610px) {
+@media screen and (max-width: 800px) {
 .character{
   max-width: 50%;
   display: block;
@@ -686,14 +721,27 @@ padding:0 25px;
  padding: 0;
 }
 
+.description.mapdescription{
+  margin: 20px auto;
+}
+
+.mobileview{
+  display: inline;
+}
+
+.fullview{
+  display: none;
+}
+
+.gallery{display: block;}
+
+#ui .imgrid{
+  display: none;
+}
 }
 
 
 @media screen and (max-width: 520px) {
-#nav{
-  width: 230px;
-  height: 86px;
-}
 
 .nointeract h1{
   top: 40%;
@@ -703,19 +751,21 @@ padding:0 25px;
 .nointeract span{
   font-size: 14pt;
 }
-
-.manu.about{
-  position: absolute;
-  top:40px;
-  left: 5px;
-
+.description{
+  font-size: 16px;
 }
 
-.manu.works{
-  position: absolute;
-  top:40px;
-  right: 8px;
+.tagline{
+  font-size: 24px;
+}
 
+#concept .imgingrid{
+  max-width: 180px;
+  max-height: 180px;
+}
+
+.parttitle{
+  font-size: 28px;
 }
 
 }
