--- a/mixx/css/main.css
+++ b/mixx/css/main.css
@@ -451,7 +451,7 @@ p.tagline3{
 
 .mapcontain{
   position: relative;
-  margin-top: -28px;
+  margin: 30px 0;
   right: 0;
   width: 100%;
   height: 500px;
