--- a/monsterpho/css/main.css
+++ b/monsterpho/css/main.css
@@ -58,23 +58,12 @@ html, body{
   margin: 90px auto 0;
 }
 
-/*navvvvvvvvvvvvvvvvvvvvvvvvv*/
 
-#nav{
-	position: fixed;
-	top:10px;
-  right: 0;
-  left: 0;
-  z-index: 5;
-  margin: 0 auto;
-  width: 500px;
-  height: 43px;
-}
 
 .readmore{
   max-width: 630px;
   padding: 0 15px;
-  margin: 15px auto;
+  margin: 15px auto 80px;
   text-align: right;
   cursor: pointer;
   display: block;
@@ -89,80 +78,10 @@ html, body{
 display: none;
 }
 
-.title{
-  font-size: 26pt;
-  font-weight: 700;
-  text-align: center;
-  letter-spacing: 6px;
-  margin: 0 auto;
-  width: 230px;
-  cursor: pointer;
-  font-family: 'San Francisco', sans-serif;
-  text-indent: 6px;
-}
 
 .headpic{
   width: 100%;
 }
-
-a{
-  text-decoration: none;
-  color: black;
-}
-
-a:hover{
-  color: grey;
-}
-
-
-
-.manu{
-    display: block;
-    font-size: 1.17em;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    font-size: 12pt;
-    font-weight: 500;
-    margin: 0 auto;
-    letter-spacing: 0.6px;
-    color: black;
-    font-family: 'San Francisco', sans-serif;
-}
-
-.manu.about{
-  position: absolute;
-  top:12px;
-  left: 10px;
-  height: 21px;
-  cursor: pointer;
-  text-align: right;
-
-}
-
-.manu.about:hover{
-  border-bottom: 1px solid black;
-  color: black;
-}
-
-
-.manu.works:hover{
-  border-bottom: 1px solid black;
-  color: black;
-}
-
-
-
-.manu.works{
-  position: absolute;
-  top:12px;
-  right: 10px;
-  height: 21px;
-  cursor: pointer;
-
-}
-/*navvvvvvvvvvvvvvvvvvvvvvvvv ennnnnnnnds*/
 
 .showcase{
   max-width: 100%;
@@ -327,112 +246,6 @@ p{
 
 
 
-/*mybutttttttttttttttttttttttttttt*/
-#mybutt{
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
-}
-
-.mycopyright{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 120px;
-  height: 20px;
-  text-align: center;
-}
-
-
-.mycopyright a:hover{
-  text-decoration: none;
-  color: black;
-}
-
-.mycopyright .myrightfont{
-  font-size: 8.5pt;
-  vertical-align: 1.5px;
-  /*line-height: 10px;*/
-  color:#999;
-}
-
-.mycopyright .myrightfont .mycopyrightc{
-  font-size: 8.5pt;
-  
-}
-
-.mysharebuttom1{
-  position: absolute;
-  right:0;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom1:hover{
-  color: white;
-  background: #3b5998;
-}
-
-.mysharebuttom2{
-  position: absolute;
-  right:20px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom2:hover{
-  color: white;
-/*  background: #36465d;*/
-  background:#55acee;
-
-}
-
-.mysharebuttom3{
-  position: absolute;
-  right:40px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom3:hover{
-  color: white;
-  background: #3f729b;
-}
-
-.mysharebuttom4{
-  position: absolute;
-  right:60px;
-  top: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: 900;
-  color: #777;
-  cursor: pointer;
-}
-
-.mysharebuttom4:hover{
-  color: white;
-  background: #55acee;
-
-}
-
 
 
 
@@ -463,9 +276,7 @@ padding:0 25px;
 }
 
 
-#mybutt{position: relative;}
 
-}
 
 
 @media screen and (max-width: 1025px) {
