fix 27mixx page and update privacy butler

--- a/mixx/css/main.css
+++ b/mixx/css/main.css
@@ -768,8 +768,8 @@ padding:0 25px;
 }
 
 #concept .imgingrid{
-  max-width: 180px;
-  max-height: 180px;
+  max-width: 300px;
+  /*max-height: 180px;*/
 }
 
 .parttitle{
