--- a/bubble/css/nav.css
+++ b/bubble/css/nav.css
@@ -9,7 +9,9 @@
   width: 100%;
   height: 62px;
   opacity: 0;
-  background: white;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.85);
   -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
     transition: all .5s cubic-bezier(.25,.46,.45,.94);
 
