--- a/css/nav.css
+++ b/css/nav.css
@@ -8,7 +8,9 @@
   z-index: +1;
   width: 100%;
   height: 62px;
-  background: white;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.85);
   -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
     transition: all .5s cubic-bezier(.25,.46,.45,.94);
 
