--- a/mixx/css/nav.css
+++ b/mixx/css/nav.css
@@ -9,7 +9,9 @@
   width: 100%;
   height: 62px;
   opacity: 0;
-  background: #191A1E;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background: rgba(25, 26, 30, 0.85);
   -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
     transition: all .5s cubic-bezier(.25,.46,.45,.94);
 
@@ -17,10 +19,11 @@
 }
 
 #navbackground2{  
-  display: none;
+display: none;
 position: fixed;
-  z-index: +3;
-  width: 100%;
+z-index: +3;
+width: 100%;
+opacity: 0.6;
 
   background: #191A1E;
   -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
