--- a/mixx/css/nav.css
+++ b/mixx/css/nav.css
@@ -23,11 +23,12 @@ display: none;
 position: fixed;
 z-index: +3;
 width: 100%;
-opacity: 0.6;
-
-  background: #191A1E;
-  -webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
-    transition: all .5s cubic-bezier(.25,.46,.45,.94);}
+backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
+background: rgba(25, 26, 30, 0.85);
+-webkit-transition: all .5s cubic-bezier(.25,.46,.45,.94);
+transition: all .5s cubic-bezier(.25,.46,.45,.94);
+}
 
 
 #nav{
